main/default/objects/Service_Location__c/Service_Location__c.object-meta.xml
<CustomObject>
    <label>Service Location</label>
    <nameField>
        <label>Service Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>