main/default/objects/Service_Location__c/fields/Acquired_Company_or_Biller__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Company_or_Biller__c</fullName>
    <description>Acquired Company or Biller from the Customer Detail of the Service Location</description>
    <formula>IF(ISBLANK(TEXT(Customer_Detail__r.Acquired_Company_Biller__c))|| ISNULL(TEXT(Customer_Detail__r.Acquired_Company_Biller__c))
,TEXT(Customer_Detail__r.Parent_Customer__r.Acquired_Company_Biller__c)
,TEXT(Customer_Detail__r.Acquired_Company_Biller__c))</formula>
    <inlineHelpText>Acquired Company or Biller from the Customer Detail of the Service Location</inlineHelpText>
    <label>Acquired Company or Biller</label>
    <type>Text</type>
</CustomField>