main/default/objects/Service_Location__c/fields/Building_Status__c.field-meta.xml
<CustomField>
    <fullName>Building_Status__c</fullName>
    <formula>TEXT( Location__r.Building__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Status</label>
    <type>Text</type>
</CustomField>