main/default/objects/Service_Location__c/fields/Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Detail</label>
    <referenceTo>Customer_Detail__c</referenceTo>
    <relationshipLabel>Service Locations</relationshipLabel>
    <relationshipName>Service_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>