main/default/objects/Service_Location__c/fields/EoF__c.field-meta.xml
<CustomField>
    <fullName>EoF__c</fullName>
    <formula>ISPICKVAL( Location__r.Building__r.Net_Classification__c, &quot;On-net&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EoF</label>
    <type>Checkbox</type>
</CustomField>