main/default/objects/Service_Location__c/fields/EoNNI__c.field-meta.xml
<CustomField>
    <fullName>EoNNI__c</fullName>
    <formula>Location__r.Building__r.EoNNI__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EoNNI</label>
    <type>Checkbox</type>
</CustomField>