main/default/objects/Service_Location__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IF(ISBLANK(Account__r.Customer_Detail__c)
	,IF(ISBLANK(Parent_Service_Location__c)
		,&#39;&#39;
		,IF(ISBLANK(Parent_Service_Location__r.Parent_Service_Location__c)
			,&#39;&#39;
			,&#39;ERROR&#39;
		)
	)
	,IF(ISBLANK(Parent_Service_Location__c)
		,IF(Account__r.Customer_Detail__c = Customer_Detail__c, &#39;1&#39;, &#39;2&#39;)
		,IF(Account__r.Customer_Detail__c = Parent_Service_Location__r.Customer_Detail__c
			,&#39;2&#39;
			,IF(OR(ISBLANK(Parent_Service_Location__r.Parent_Service_Location__r.Parent_Service_Location__c), Account__r.Customer_Detail__c = Parent_Service_Location__r.Parent_Service_Location__r.Customer_Detail__c)
				,&#39;3&#39;
				,&#39;ERROR&#39;)
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>