main/default/objects/Service_Location__c/fields/Mark_for_Delete__c.field-meta.xml
<CustomField>
    <fullName>Mark_for_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark for Delete</label>
    <type>Checkbox</type>
</CustomField>