main/default/objects/Service_Location__c/fields/Parent_Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Parent_Service_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Service Location</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Service_Location__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Service_Location__c.Parent_Service_Location__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>Service_Location__c.Parent_Service_Location__r.ICC_Subscriber_ID__c</field>
            <operation>equals</operation>
            <valueField>Service_Location__c.Account__r.ICC_Account_Number__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Location__c</referenceTo>
    <relationshipLabel>Service Locations</relationshipLabel>
    <relationshipName>Service_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>