main/default/objects/Service_Location__c/fields/Search_BillingID__c.field-meta.xml
<CustomField>
    <fullName>Search_BillingID__c</fullName>
    <description>This field will be used to search service location with BillingID</description>
    <label>Search BillingID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>