main/default/objects/Service_Location__c/fields/Search_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Search_Legacy_ID__c</fullName>
    <description>This field will be used to search service location with Legacy ID</description>
    <label>Search Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>