main/default/objects/Service_Location__c/validationRules/MaximumIntegrationHierarchyDepth.validationRule-meta.xml
<ValidationRule>
    <fullName>MaximumIntegrationHierarchyDepth</fullName>
    <active>true</active>
    <description>This enforces the maximum integration hierarchy depth limit of 3.  The root subscriber check can be removed once hierarchies are cleaned up properly.</description>
    <errorConditionFormula>Level__c = &#39;ERROR&#39;</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>The maximum integration hierarchy depth is 3.</errorMessage>
</ValidationRule>