main/default/objects/Service_Location__c/validationRules/ValidatePhoneLength.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidatePhoneLength</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;) || LEN(Phone__c) = 0)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone length must be 10 digits.</errorMessage>
</ValidationRule>